--- a/leaflet.html
+++ b/leaflet.html
@@ -35,7 +35,10 @@ const greenIcon = new L.Icon({
   shadowSize: [41, 41]
 });
 
-const map = L.map('map').setView([-2.5, 117], 5);
+const map = L.map('map', {
+  scrollWheelZoom: false  // 🚫 Nonaktifkan zoom pakai scroll
+}).setView([-2.5, 117], 5);
+
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   attribution: '&copy; OpenStreetMap contributors'
 }).addTo(map);
