--- a/leaflet.html
+++ b/leaflet.html
@@ -26,6 +26,7 @@
       color: #007bff;
       cursor: pointer;
       text-decoration: none;
+      margin-bottom: 6px; /* jarak antar tombol */
     }
     .legend a:hover {
       text-decoration: underline;
@@ -100,7 +101,7 @@ let isFirstLoad = true;
   const legend = L.control({position: 'bottomleft'});
   legend.onAdd = function(map) {
     const div = L.DomUtil.create('div', 'legend');
-    div.innerHTML = '<b>Choose Location:</b><br>';
+    div.innerHTML = '<b>Choose Location:</b><br><br>';
     for (const [key, val] of Object.entries(deviceLocations)) {
       div.innerHTML += `<a onclick="zoomTo('${key}')">${key}</a>`;
     }
