--- a/leaflet.html
+++ b/leaflet.html
@@ -15,22 +15,62 @@
     #map { height: 100vh; }
     .legend {
       background: white;
-      padding: 10px;
-      line-height: 1.4;
-      font-size: 13px;
-      border-radius: 5px;
-      box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+      padding: 14px;
+      font-size: 14px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      font-family: 'Segoe UI', sans-serif;
+      min-width: 160px;
     }
-    .legend a {
-      display: block;
-      color: #007bff;
+
+    .legend-title {
+      font-weight: bold;
+      margin-bottom: 10px;
+      font-size: 15px;
+      color: #333;
+    }
+
+    .legend button {
+      width: 100%;
+      padding: 8px 10px;
+      margin-bottom: 6px;
+      background-color: #f2f2f2;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
-      text-decoration: none;
-      margin-bottom: 6px; /* jarak antar tombol */
+      text-align: left;
+      font-size: 13px;
+      color: #333;
+      transition: background-color 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 6px;
     }
-    .legend a:hover {
-      text-decoration: underline;
+
+    .legend button:hover {
+      background-color: #e0e0e0;
     }
+
+    .leaflet-control-home {
+      background-color: white;
+      border: none;
+      border-radius: 4px;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+      width: 45px;
+      height: 45px;
+      line-height: 45px;
+      text-align: center;
+      cursor: pointer;
+      font-size: 30px;
+      font-weight: bold;
+      color: #333;
+      margin-top: 10px;
+    }
+    .leaflet-control-home:hover {
+      background-color: #f0f0f0;
+    }
+
+
   </style>
 </head>
 
@@ -60,6 +100,30 @@
   };
 
   L.control.layers(baseMaps).addTo(map); // tambahkan kontrol layer dropdown
+
+  const homeControl = L.Control.extend({
+  options: { position: 'topright' },
+
+  onAdd: function(map) {
+    const container = L.DomUtil.create('div', 'leaflet-bar leaflet-control leaflet-control-home');
+    container.innerHTML = '🔄'; // bisa diganti dengan ikon SVG jika mau
+
+    container.onclick = function() {
+      if (window.initialBounds) {
+        map.flyToBounds(window.initialBounds, {
+          paddingTopLeft: [50, 50],
+          paddingBottomRight: [50, 150]
+        });
+      }
+    };
+
+    return container;
+  }
+});
+
+map.addControl(new homeControl());
+
+
 
   const token = "6fcyL0WFswuh0S8CktF0fNr7APNDXDheN1xwGgbbx6ru85dvKOUpvBuZy_Xu6u7CAP4MM7I_wHOvIDI_Wrz2rw==";
   const org = "CBilly";
@@ -100,13 +164,14 @@ let isFirstLoad = true;
 // 🧭 Buat legend pojok bawah
   const legend = L.control({position: 'bottomleft'});
   legend.onAdd = function(map) {
-    const div = L.DomUtil.create('div', 'legend');
-    div.innerHTML = '<b>Choose Location:</b><br><br>';
-    for (const [key, val] of Object.entries(deviceLocations)) {
-      div.innerHTML += `<a onclick="zoomTo('${key}')">${key}</a>`;
-    }
-    return div;
-  };
+  const div = L.DomUtil.create('div', 'legend');
+  div.innerHTML = `<div class="legend-title">Choose Location:</div>`;
+  for (const [key, val] of Object.entries(deviceLocations)) {
+    div.innerHTML += `<button onclick="zoomTo('${key}')">${key}</button>`;
+  }
+  return div;
+};
+
   legend.addTo(map);
 
   // 🔍 Fungsi zoom ke lokasi
@@ -215,14 +280,14 @@ const label = L.marker([d.lat, d.lon], {
   });
 
   if (isFirstLoad && bounds.length > 0) {
-    //map.fitBounds(bounds, { padding: [50, 50] });
-    map.fitBounds(bounds, {
+  window.initialBounds = L.latLngBounds(bounds); // ⬅️ simpan sebagai variabel global
+  map.fitBounds(initialBounds, {
     paddingTopLeft: [50, 50],
-    paddingBottomRight: [50, 150]  // tambahkan ekstra ruang di bawah
-    });
-
-    isFirstLoad = false;
+    paddingBottomRight: [50, 150] // sesuai kebutuhan spasi bawah
+  });
+  isFirstLoad = false;
   }
+
 }
 
 
