--- a/leaflet.html
+++ b/leaflet.html
@@ -255,8 +255,8 @@ async function updateMap() {
         Time:
       </div>
       <div>
-        ${d.Flowrate.toFixed(2)}<br>
-        ${d.Totalizer.toFixed(2)}<br>
+        ${d.Flowrate.toFixed(2)}&nbsp;m³/h<br>
+        ${d.Totalizer.toFixed(2)}&nbsp;m³<br>
         ${new Date(d._time).toLocaleString('id-ID')}
       </div>
     </div>
