--- a/leaflet.html
+++ b/leaflet.html
@@ -91,7 +91,7 @@
 
   const map = L.map('map', {
     scrollWheelZoom: false,
-    layers: [satellite]
+    layers: [grayscale]
   }).setView([-2.5, 117], 5);
 
   const baseMaps = {
