--- a/leaflet.html
+++ b/leaflet.html
@@ -222,7 +222,7 @@ async function updateMap() {
         Time:
       </div>
       <div>
-        ${d.Flowrate.toFixed(2)}&nbsp;m³/h<br>
+        ${d.Flowrate.toFixed(2)}&nbsp;l/s<br>
         ${d.Totalizer.toFixed(0)}&nbsp;m³<br>
         ${new Date(d._time).toLocaleString('id-ID')}
       </div>
