--- a/leaflet.html
+++ b/leaflet.html
@@ -70,23 +70,58 @@
       background-color: #f0f0f0;
     }
     .custom-label {
-      background-color: rgba(50, 50, 50, 0.8);
-      padding: 10px 14px;
-      border-radius: 6px;
-      color: white;
+      background: rgba(30, 30, 30, 0.7); /* transparan elegan */
+      padding: 12px 16px;
+      border-radius: 12px;
+      color: #fff;
       font-family: 'Segoe UI', sans-serif;
       font-size: 13px;
-      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.35);
       display: inline-block;
       text-align: left;
       transform: scale(1);
-      transition: transform 0.2s ease;
+      transition: all 0.25s ease;
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(6px);
+      min-width: 170px;
+      position: relative;
+      z-index: 1; /* default semua di belakang */
     }
 
     .custom-label.hovered {
-      transform: scale(1.2);
-      z-index: 9999;
+      transform: scale(1.15) translateY(-4px);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+      border-color: rgba(255, 255, 255, 0.35);
+      z-index: 1000; /* hanya yang aktif di depan */
     }
+
+    .custom-label .device-id {
+      font-weight: bold;
+      font-size: 14px;
+      margin-bottom: 8px;
+      color: #4ade80; /* hijau neon */
+    }
+
+    .custom-label .info-row {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 4px;
+    }
+
+    .custom-label .info-row:last-child {
+      margin-bottom: 0;
+    }
+
+    .custom-label .label {
+      color: #ddd;
+      font-weight: 500;
+    }
+
+    .custom-label .value {
+      font-weight: bold;
+      color: #fff;
+    }
+
     
 
   </style>
@@ -223,21 +258,22 @@ async function updateMap() {
     const labelHTML = `
       <div class="custom-label ${hoveredDevice === d.device_id ? 'hovered' : ''}" 
           id="label-${d.device_id}">
-        <div style="font-weight: bold; margin-bottom: 6px;">${d.device_id}</div>
-        <div style="display: flex;">
-          <div style="margin-right: 8px;">
-            Flowrate:<br>
-            Totalizer:<br>
-            Time:
-          </div>
-          <div>
-            ${d.Flowrate.toFixed(2)}&nbsp;l/s<br>
-            ${d.Totalizer.toFixed(0)}&nbsp;m³<br>
-            ${new Date(d._time).toLocaleString('id-ID')}
-          </div>
+        <div class="device-id">${d.device_id}</div>
+        <div class="info-row">
+          <span class="label">Flowrate</span>
+          <span class="value">${d.Flowrate.toFixed(2)} l/s</span>
+        </div>
+        <div class="info-row">
+          <span class="label">Totalizer</span>
+          <span class="value">${d.Totalizer.toFixed(0)} m³</span>
+        </div>
+        <div class="info-row">
+          <span class="label">Time</span>
+          <span class="value">${new Date(d._time).toLocaleString('id-ID')}</span>
         </div>
       </div>
     `;
+
 
     const label = L.marker([d.lat, d.lon], {
       icon: L.divIcon({
@@ -252,32 +288,46 @@ async function updateMap() {
 
 
     // fungsi untuk set hover state
-    function setHover(active) {
-      const lbl = document.getElementById(`label-${d.device_id}`);
-      if (!lbl) return;
+    function setHover(active, deviceId) {
+      document.querySelectorAll('.custom-label').forEach(el => {
+        el.classList.remove('hovered');
+        el.style.zIndex = 1; // reset semua ke belakang
+      });
 
       if (active) {
-        hoveredDevice = d.device_id;
-        lbl.classList.add('hovered');
-      } else if (hoveredDevice === d.device_id) {
+        const lbl = document.getElementById(`label-${deviceId}`);
+        if (lbl) {
+          lbl.classList.add('hovered');
+          lbl.style.zIndex = 1000; // yang di-hover ke depan
+        }
+        hoveredDevice = deviceId;
+      } else {
         hoveredDevice = null;
-        lbl.classList.remove('hovered');
+
       }
     }
 
-    marker.on('mouseover', () => setHover(true));
+
+    marker.on('mouseover', () => setHover(true, d.device_id));
     marker.on('mouseout', (e) => {
-      if (!e.originalEvent.relatedTarget || !e.originalEvent.relatedTarget.closest(`#label-${d.device_id}`)) {
-        setHover(false);
+      if (
+        !e.originalEvent.relatedTarget ||
+        !e.originalEvent.relatedTarget.closest(`#label-${d.device_id}`)
+      ) {
+        setHover(false, d.device_id);
       }
     });
 
-    label.on('mouseover', () => setHover(true));
+    label.on('mouseover', () => setHover(true, d.device_id));
     label.on('mouseout', (e) => {
-      if (!e.originalEvent.relatedTarget || !e.originalEvent.relatedTarget.closest('.leaflet-marker-icon')) {
-        setHover(false);
+      if (
+        !e.originalEvent.relatedTarget ||
+        !e.originalEvent.relatedTarget.closest('.leaflet-marker-icon')
+      ) {
+        setHover(false, d.device_id);
       }
     });
+
 
     markerGroup.addLayer(marker);
     markerGroup.addLayer(label);
