--- a/leaflet.html
+++ b/leaflet.html
@@ -269,7 +269,19 @@ async function updateMap() {
         </div>
         <div class="info-row">
           <span class="label">Time:</span>
-          <span class="value">${new Date(d._time).toLocaleString('id-ID')}</span>
+          <span class="value">${
+            (() => {
+              const dt = new Date(d._time);
+              const day = dt.getDate();
+              const month = dt.getMonth() + 1;
+              const year = dt.getFullYear();
+              const hours = String(dt.getHours()).padStart(2, '0');
+              const minutes = String(dt.getMinutes()).padStart(2, '0');
+              const seconds = String(dt.getSeconds()).padStart(2, '0');
+              return `${day}/${month}/${year}, ${hours}:${minutes}:${seconds}`;
+            })()
+          }</span>
+
         </div>
       </div>
     `;
