--- a/leaflet.html
+++ b/leaflet.html
@@ -99,7 +99,7 @@
       font-weight: bold;
       font-size: 14px;
       margin-bottom: 8px;
-      color: #59c280; /* hijau neon */
+      color: #63e097; /* hijau neon */
     }
 
     .custom-label .info-row {
