--- a/leaflet.html
+++ b/leaflet.html
@@ -11,17 +11,17 @@
     html, body { margin: 0; padding: 0; height: 100%; }
     #map { height: 100vh; }
     .legend {
-      background: white; padding: 14px; font-size: 14px; border-radius: 8px;
+      background: rgba(30, 30, 30, 0.7); padding: 14px; font-size: 14px; border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.15); font-family: 'Segoe UI', sans-serif;
       min-width: 160px;
     }
-    .legend-title { font-weight: bold; margin-bottom: 10px; font-size: 15px; color: #333; }
+    .legend-title { font-weight: bold; margin-bottom: 10px; font-size: 15px; color: #ffffff; }
     .legend button {
-      width: 100%; padding: 8px 10px; margin-bottom: 6px; background-color: #f2f2f2;
+      width: 100%; padding: 8px 10px; margin-bottom: 6px; background-color: rgba(29, 28, 28, 0.7);
       border: none; border-radius: 6px; cursor: pointer; text-align: left;
-      font-size: 13px; color: #333; display: flex; align-items: center; gap: 6px;
+      font-size: 13px; color: #ffffff; display: flex; align-items: center; gap: 6px;
     }
-    .legend button:hover { background-color: #e0e0e0; }
+    .legend button:hover { background-color: #474646; }
 
     .leaflet-control-home {
       background-color: white; border: none; border-radius: 4px;
