--- a/leaflet.html
+++ b/leaflet.html
@@ -89,7 +89,70 @@
     line-height: 1.2em;               /* Tinggi baris pas */
     font-family: 'Segoe UI', sans-serif;
   }
-  </style>
+
+  /* Tombol chat melayang */
+  #chatButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #f9f9f9;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    font-size: 28px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    z-index: 9999;
+  }
+  #chatButton:hover {
+    background-color: #e4e0e0;
+  }
+
+  /* Iframe chat */
+  #chatContainer {
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
+    width: 350px;
+    height: 500px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    overflow: hidden;
+    display: none;
+    z-index: 9998;
+  }
+  #chatContainer iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+</style>
+
+<!-- Tombol chat -->
+<button id="chatButton">🤔</button>
+
+<!-- Kontainer chat -->
+<div id="chatContainer">
+  <iframe src="https://christosun.github.io/chatbot/chatbot.html"></iframe>
+</div>
+
+<script>
+  const chatBtn = document.getElementById("chatButton");
+  const chatBox = document.getElementById("chatContainer");
+
+  chatBtn.addEventListener("click", () => {
+    if (chatBox.style.display === "none" || chatBox.style.display === "") {
+      chatBox.style.display = "block";
+    } else {
+      chatBox.style.display = "none";
+    }
+  });
+</script>
+
+
 </head>
 <body>
 <div id="map"></div>
